Identity Role Ayarları , Kort Ayarları , Okul Ayarları eklendi.

--- a/AtkTennis/Views/Security/ListUsers.cshtml
+++ b/AtkTennis/Views/Security/ListUsers.cshtml
@@ -54,7 +54,7 @@
                                 <td>
                                     <a href="#" class="btn btn-warning">Detaylar</a>
                                     <button class="btn btn-success" id="upd_@Model.AppIdentityUsers[i].Id" onclick="openUpdateModel(this.id)">Güncelle</button>
-                                    <button class="btn btn-danger" id="@Model.AppIdentityUsers[i].Id" onclick="openDeleteModel(this.id)">Sil</button>
+                                    <button class="btn btn-danger" id="@Model.AppIdentityUsers[i].Id" onclick="asd(this.id)">Sil</button>
                                 </td>
                                
                             </tr>
@@ -64,18 +64,6 @@
             </div>
             <!-- /.card-body -->
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
         <div class="modal fade" id="updateModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
