--- a/AtkTennisWeb/Views/Public/SignIn.cshtml
+++ b/AtkTennisWeb/Views/Public/SignIn.cshtml
@@ -33,7 +33,7 @@
             <div class="card-body login-card-body" style="background-color:transparent">       
                 <div>
                     <div class="input-group mb-3">
-                        <input type="text" id="username" class="form-control" placeholder="Kullanıcı Adı" autocomplete="new-password">
+                        <input type="text" id="username" class="form-control" placeholder="Kullanıcı Adı" >
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
